--- a/activemq-tooling/activemq-perf-maven-plugin/pom.xml
+++ b/activemq-tooling/activemq-perf-maven-plugin/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.activemq.tooling</groupId>
     <artifactId>activemq-tooling</artifactId>
-    <version>5.11.5-SNAPSHOT</version>
+    <version>5.11.5.talend</version>
   </parent>
 
   <artifactId>activemq-perf-maven-plugin</artifactId>
