--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>org.apache.activemq</groupId>
   <artifactId>activemq-parent</artifactId>
-  <version>5.11.5-SNAPSHOT</version>
+  <version>5.11.5.talend</version>
   <packaging>pom</packaging>
   <name>ActiveMQ</name>
   <inceptionYear>2005</inceptionYear>
@@ -268,7 +268,7 @@
     <connection>scm:git:ssh://git@github.com:Talend/activemq.git</connection>
     <developerConnection>scm:git:ssh://git@github.com:Talend/activemq.git</developerConnection>
     <url>https://fisheye6.atlassian.com/browse/~br=master/activemq-git</url>
-    <tag>HEAD</tag>
+    <tag>activemq-5.11.5.talend</tag>
   </scm>
 
   <dependencyManagement>
