activemq Talend init

--- a/activemq-web-console/pom.xml
+++ b/activemq-web-console/pom.xml
@@ -180,7 +180,7 @@
       <artifactId>tomcat-websocket-api</artifactId>
       <scope>provided</scope>
     </dependency>
-      
+
     <!-- j2ee jars -->
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
@@ -230,7 +230,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-console</artifactId>
-      <version>${project.version}</version>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
@@ -269,13 +269,13 @@
     </dependency>
 
     <!-- JSTL support -->
-    
+
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>apache-jstl</artifactId>
       <scope>provided</scope>
     </dependency>
-    
+
      <!-- Tag Libs -->
     <dependency>
       <groupId>org.apache.taglibs</groupId>
@@ -287,7 +287,7 @@
       <artifactId>taglibs-standard-impl</artifactId>
       <scope>provided</scope>
     </dependency>
-    
+
     <!-- used for testing -->
     <dependency>
       <groupId>junit</groupId>
@@ -307,7 +307,7 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>apache-jsp</artifactId>
@@ -319,12 +319,12 @@
           </exclusion>
       </exclusions>
     </dependency>
-    
+
      <dependency>
        <groupId>org.apache.geronimo.specs</groupId>
        <artifactId>geronimo-annotation_1.0_spec</artifactId>
     </dependency>
- 
+
 
 	<dependency>
 		<groupId>org.ow2.asm</groupId>
