--- a/activemq-camel/pom.xml
+++ b/activemq-camel/pom.xml
@@ -38,7 +38,7 @@
        *
     </activemq.osgi.import.pkg>
     <activemq.osgi.export>
-        org.apache.activemq.camel*;version:="${project.version}";-noimport:=true
+        org.apache.activemq.camel*;version:="${upstream.version}";-noimport:=true
     </activemq.osgi.export>
     <camel.osgi.export.service>
       org.apache.camel.spi.ComponentResolver;component=activemq,
