--- a/activemq-console/pom.xml
+++ b/activemq-console/pom.xml
@@ -40,7 +40,7 @@
       *
     </activemq.osgi.import.pkg>
     <activemq.osgi.export>
-      org.apache.activemq.console*;version=${project.version};-noimport:=true,
+      org.apache.activemq.console*;version=${upstream.version};-noimport:=true,
     </activemq.osgi.export>
   </properties>
 
