--- a/activemq-jms-pool/pom.xml
+++ b/activemq-jms-pool/pom.xml
@@ -38,7 +38,7 @@
       *
     </activemq.osgi.import.pkg>
     <activemq.osgi.export>
-      org.apache.activemq.jms.pool*;version=${project.version};-noimport:=true,
+      org.apache.activemq.jms.pool*;version=${upstream.version};-noimport:=true,
     </activemq.osgi.export>
   </properties>
 
