--- a/activemq-karaf-itest/pom.xml
+++ b/activemq-karaf-itest/pom.xml
@@ -120,7 +120,7 @@
       <classifier>features</classifier>
       <scope>test</scope>
     </dependency>
-    
+
     <!-- test and logging -->
     <dependency>
       <groupId>junit</groupId>
@@ -171,7 +171,7 @@
           <excludes>
           </excludes>
           <systemPropertyVariables>
-            <activemqVersion>${project.version}</activemqVersion>
+            <activemqVersion>${upstream.version}</activemqVersion>
             <karafVersion>${karaf-version}</karafVersion>
           </systemPropertyVariables>
         </configuration>
@@ -235,7 +235,7 @@
               -->
               <argLine>-Dorg.ops4j.pax.url.mvn.localRepository=${maven.repo.local}</argLine>
               <systemPropertyVariables>
-                <activemqVersion>${project.version}</activemqVersion>
+                <activemqVersion>${upstream.version}</activemqVersion>
                 <karafVersion>${karaf-version}</karafVersion>
                 <felixFrameworkVersion>${felix-framework-version}</felixFrameworkVersion>
               </systemPropertyVariables>
