--- a/activemq-karaf/pom.xml
+++ b/activemq-karaf/pom.xml
@@ -178,7 +178,7 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <Export-Package>org.apache.activemq.karaf*;version=${project.version};-split-package:=merge-first</Export-Package>
+            <Export-Package>org.apache.activemq.karaf*;version=${upstream.version};-split-package:=merge-first</Export-Package>
             <Import-Package>
               org.apache.felix.gogo.commands,
               org.apache.karaf.shell.console;version="[2,4)",
