--- a/activemq-pool/pom.xml
+++ b/activemq-pool/pom.xml
@@ -39,7 +39,7 @@
       *
     </activemq.osgi.import.pkg>
     <activemq.osgi.export>
-      org.apache.activemq.pool*;version=${project.version};-noimport:=true,
+      org.apache.activemq.pool*;version=${upstream.version};-noimport:=true,
     </activemq.osgi.export>
   </properties>
 
@@ -110,7 +110,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
   <profiles>
   	<profile>
       <id>activemq.tests-autoTransport</id>
