--- a/activemq-ra/pom.xml
+++ b/activemq-ra/pom.xml
@@ -35,7 +35,7 @@
       *
     </activemq.osgi.import.pkg>
     <activemq.osgi.export>
-      org.apache.activemq.ra*;version=${project.version};-noimport:=true,
+      org.apache.activemq.ra*;version=${upstream.version};-noimport:=true,
     </activemq.osgi.export>
   </properties>
 
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-broker</artifactId>
-      <version>${project.version}</version>
+      <version>${upstream.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
