--- a/activemq-osgi/pom.xml
+++ b/activemq-osgi/pom.xml
@@ -29,6 +29,7 @@
   <packaging>bundle</packaging>
   <name>ActiveMQ :: OSGi bundle</name>
   <description>Puts together an ActiveMQ OSGi bundle</description>
+  <version>5.15.2.tesb1</version>
 
   <properties>
     <activemq.osgi.import.pkg>
@@ -82,6 +83,8 @@
         *
     </activemq.osgi.import.pkg>
     <activemq.osgi.export>
+      org.apache.activemq.osgi*;version=${project.version};-noimport:=true;-split-package:=merge-first,
+      org.apache.activemq.camel*;version=${project.version};-noimport:=true;-split-package:=merge-first,
       org.apache.activemq*;version=${upstream.version};-noimport:=true;-split-package:=merge-first,
       org.apache.activemq.web*;version=${upstream.version};-noimport:=true;-split-package:=merge-first,
     </activemq.osgi.export>
@@ -104,16 +107,19 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-broker</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
 
     <!-- Additional message store impls -->
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-kahadb-store</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-jdbc-store</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
@@ -125,43 +131,52 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-stomp</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-amqp</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-mqtt</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-http</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-partition</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
 
     <!-- Additional Dependencies. -->
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-jaas</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
 
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-console</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
 
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-ra</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
 
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-web</artifactId>
+      <version>${upstream.version}</version>
       <exclusions>
       <exclusion>
           <artifactId>activemq-all</artifactId>
@@ -172,6 +187,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-spring</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
 
     <dependency>
@@ -182,6 +198,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-runtime-config</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
 
     <dependency>
