--- a/activemq-camel/pom.xml
+++ b/activemq-camel/pom.xml
@@ -29,9 +29,11 @@
   <name>ActiveMQ :: Camel</name>
   <description>ActiveMQ component for Camel</description>
   <packaging>bundle</packaging>
+  <version>5.15.5.tesb1</version>
 
   <properties>
     <activemq.osgi.import.pkg>
+       javax.jms;version="[1.1,3)",
        org.springframework.jms*;version="[4,5)",
        org.apache.activemq.pool,
        org.apache.camel*;version="${camel-version-range}",
@@ -69,12 +71,14 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-spring</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
 
     <!-- to use AMQ with Camel efficient we would need to use pooling -->
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-pool</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
@@ -86,12 +90,14 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-unit-tests</artifactId>
+      <version>${upstream.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-broker</artifactId>
+      <version>${upstream.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -161,12 +167,14 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-jaas</artifactId>
+      <version>${upstream.version}</version>
       <optional>true</optional>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-ra</artifactId>
+      <version>${upstream.version}</version>
       <optional>true</optional>
       <scope>test</scope>
     </dependency>
@@ -254,7 +262,7 @@
         </plugins>
       </build>
     </profile>
-	<profile>
+    <profile>
       <id>activemq.tests-autoTransport</id>
       <activation>
         <property>
