--- a/activemq-ra/pom.xml
+++ b/activemq-ra/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-broker</artifactId>
-      <version>${project.version}</version>
+      <version>${upstream.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
