--- a/assembly/src/release/examples/openwire/advanced-scenarios/pom.xml
+++ b/assembly/src/release/examples/openwire/advanced-scenarios/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-client</artifactId>
-            <version>${project.version}</version>
+            <version>${upstream.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
