--- a/assembly/src/release/examples/openwire/java/pom.xml
+++ b/assembly/src/release/examples/openwire/java/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-client</artifactId>
-      <version>${project.version}</version>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
