--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
   <inceptionYear>2005</inceptionYear>
 
   <properties>
+    <upstream.version>5.15.9</upstream.version>
+
     <activeio-version>3.1.4</activeio-version>
     <siteId>activemq-${project.version}</siteId>
     <projectName>Apache ActiveMQ</projectName>
@@ -266,10 +268,10 @@
   </modules>
 
   <scm>
-    <connection>scm:git:http://git-wip-us.apache.org/repos/asf/activemq.git</connection>
-    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/activemq.git</developerConnection>
-    <url>https://fisheye6.atlassian.com/browse/~br=master/activemq-git</url>
-    <tag>activemq-5.15.9</tag>
+    <connection>scm:git:http://github.com/Talend/activemq.git</connection>
+    <developerConnection>scm:git:https://github.com/Talend/activemq.git</developerConnection>
+    <url>https://github.com/Talend/activemq</url>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencyManagement>
@@ -280,178 +282,178 @@
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-amqp</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-http</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-log4j-appender</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-amq-store</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-kahadb-store</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-jdbc-store</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-leveldb-store</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-mqtt</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-stomp</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-client</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-openwire-legacy</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-broker</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-all</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-camel</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-partition</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq.tooling</groupId>
         <artifactId>activemq-junit</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-unit-tests</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
         <type>test-jar</type>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-broker</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
         <type>test-jar</type>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-jaas</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-jms-pool</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-pool</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-shiro</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-spring</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-runtime-config</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-web</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-xmpp</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-web-demo</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
         <type>war</type>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-web-console</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
         <type>war</type>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-console</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-ra</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-rar</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
         <type>rar</type>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-run</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-web</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
         <type>war</type>
       </dependency>
       <dependency>
@@ -469,12 +471,12 @@
       <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-openwire-generator</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
      <dependency>
         <groupId>org.apache.activemq</groupId>
         <artifactId>activemq-karaf</artifactId>
-        <version>${project.version}</version>
+        <version>${upstream.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq.protobuf</groupId>
