--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
   <properties>
     <upstream.version>5.15.9</upstream.version>
+    <activemq-web-console.tesb.version>5.15.9.tesb1</activemq-web-console.tesb.version>
 
     <activeio-version>3.1.4</activeio-version>
     <siteId>activemq-${project.version}</siteId>
