--- a/activemq-all/pom.xml
+++ b/activemq-all/pom.xml
@@ -21,47 +21,60 @@
   <packaging>jar</packaging>
   <name>ActiveMQ :: All JAR bundle</name>
   <description>Puts together an ActiveMQ jar bundle</description>
+  <version>${revision}</version>
 
+  <properties>
+    <revision>${activemq-all.tesb.version}</revision>
+  </properties>
   <dependencies>
 
     <!-- activemq -->
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-camel</artifactId>
+      <version>${activemq-camel.tesb.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-console</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <!-- Transports -->
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-stomp</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-amqp</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-mqtt</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-http</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <!-- Stores -->
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-kahadb-store</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-jdbc-store</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-leveldb-store</artifactId>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
@@ -94,23 +107,23 @@
             <configuration>
               <artifactSet>
                 <includes>
-                  <include>${project.groupId}:activemq-client</include>
-                  <include>${project.groupId}:activemq-openwire-legacy</include>
-                  <include>${project.groupId}:activemq-camel</include>
-                  <include>${project.groupId}:activemq-jaas</include>
-                  <include>${project.groupId}:activemq-broker</include>
-                  <include>${project.groupId}:activemq-console</include>
-                  <include>${project.groupId}:activemq-shiro</include>
-                  <include>${project.groupId}:activemq-spring</include>
-                  <include>${project.groupId}:activemq-pool</include>
-                  <include>${project.groupId}:activemq-jms-pool</include>
-                  <include>${project.groupId}:activemq-amqp</include>
-                  <include>${project.groupId}:activemq-http</include>
-                  <include>${project.groupId}:activemq-mqtt</include>
-                  <include>${project.groupId}:activemq-stomp</include>
-                  <include>${project.groupId}:activemq-kahadb-store</include>
-                  <include>${project.groupId}:activemq-leveldb-store</include>
-                  <include>${project.groupId}:activemq-jdbc-store</include>
+                  <include>${project.groupId}:activemq-client:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-openwire-legacy:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-camel:${activemq-camel.tesb.version}</include>
+                  <include>${project.groupId}:activemq-jaas:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-broker:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-console:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-shiro:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-spring:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-pool:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-jms-pool:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-amqp:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-http:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-mqtt:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-stomp:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-kahadb-store:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-leveldb-store:${upstream.version}</include>
+                  <include>${project.groupId}:activemq-jdbc-store:${upstream.version}</include>
                   <include>org.apache.activemq.protobuf:activemq-protobuf</include>
                   <include>org.fusesource.hawtbuf:hawtbuf</include>
                   <include>org.jasypt:jasypt</include>
@@ -219,7 +232,7 @@
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-camel</artifactId>
-          <version>${upstream.version}</version>
+          <version>${activemq-camel.tesb.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
