--- a/activemq-karaf/pom.xml
+++ b/activemq-karaf/pom.xml
@@ -29,8 +29,10 @@
   <packaging>bundle</packaging>
   <name>ActiveMQ :: Apache Karaf</name>
   <description>Provides resources for running ActiveMQ in Apache Karaf</description>
+  <version>${revision}</version>
 
   <properties>
+    <revision>${activemq-karaf.features.tesb.version}</revision>
     <xpp3-bundle-version>1.1.4c_5</xpp3-bundle-version>
     <jodatime-bundle-version>2.9</jodatime-bundle-version>
     <jdom-bundle-version>1.1_4</jdom-bundle-version>
