--- a/activemq-karaf/src/main/resources/org.apache.activemq.webconsole.cfg
+++ b/activemq-karaf/src/main/resources/org.apache.activemq.webconsole.cfg
@@ -17,7 +17,7 @@
 
 webconsole.jms.url=tcp://localhost:61616
 webconsole.jmx.url=service:jmx:rmi:///jndi/rmi://localhost:1099/karaf-root
-webconsole.jmx.user=karaf
-webconsole.jmx.password=karaf
-webconsole.jms.user=karaf
-webconsole.jms.password=karaf
+webconsole.jmx.user=
+webconsole.jmx.password=
+webconsole.jms.user=
+webconsole.jms.password=
