--- a/activemq-all/pom.xml
+++ b/activemq-all/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.apache.activemq</groupId>
     <artifactId>activemq-parent</artifactId>
-    <version>5.15.10</version>
+    <version>5.15.10.tesb1</version>
   </parent>
 
   <artifactId>activemq-all</artifactId>
