--- a/activemq-cf/pom.xml
+++ b/activemq-cf/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.activemq</groupId>
     <artifactId>activemq-parent</artifactId>
-    <version>5.15.10</version>
+    <version>5.15.10.tesb1</version>
   </parent>
 
   <artifactId>activemq-cf</artifactId>
