--- a/activemq-client/pom.xml
+++ b/activemq-client/pom.xml
@@ -326,7 +326,7 @@
                 <dependency>
                     <groupId>org.apache.activemq</groupId>
                     <artifactId>activemq-openwire-generator</artifactId>
-                    <version>${project.version}</version>
+                    <version>${upstream.version}</version>
                 </dependency>
             </dependencies>
           </plugin>
