TMC-21057 - Http/https proxy authentication on RE 2.8.2 NOT work (prepare patch branch)

--- a/activemq-osgi/pom.xml
+++ b/activemq-osgi/pom.xml
@@ -112,6 +112,19 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-broker</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>${project.groupId}</groupId>
+          <artifactId>activemq-client</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- Patched client -->
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>activemq-client</artifactId>
+      <version>5.15.11</version>
+      <classifier>tipaas</classifier>
     </dependency>
 
     <!-- Additional message store impls -->
