--- a/activemq-osgi/pom.xml
+++ b/activemq-osgi/pom.xml
@@ -105,6 +105,7 @@
     </activemq.osgi.private.pkg>
     <activemq.osgi.dynamic.import>*</activemq.osgi.dynamic.import>
     <surefire.argLine>-Xmx512M</surefire.argLine>
+    <tipaas.classifier>tipaas</tipaas.classifier>
   </properties>
 
   <dependencies>
@@ -206,6 +207,7 @@
   </dependencies>
 
   <build>
+    <finalName>${artifactId}-${version}-${tipaas.classifier}</finalName>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
