TMC-21057 - Http/https proxy authentication on RE 2.8.2 NOT work (prepare patch branch) [4]

--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,7 @@
     <module>activemq-log4j-appender</module>
     <module>activemq-http</module>
 -->
+    <module>activemq-spring</module>
     <module>activemq-http</module>
     <module>activemq-osgi</module>
   </modules>
