--- a/activemq-osgi/pom.xml
+++ b/activemq-osgi/pom.xml
@@ -204,7 +204,7 @@
   </dependencies>
 
   <build>
-    <finalName>${artifactId}-${version}-${tipaas.classifier}</finalName>
+    <finalName>${project.artifactId}-${project.version}-${tipaas.classifier}</finalName>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
@@ -274,12 +274,32 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>3.0.1</version>
+        <executions>
+          <execution>
+            <id>get-the-git-infos</id>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+            <phase>validate</phase>
+          </execution>
+        </executions>
+        <configuration>
+          <dateFormat>yyyy-MM-dd'T'HH:mm:ss.SSSZ</dateFormat>
+        </configuration>
+      </plugin>
 
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
+            <Build-Label>${git.build.number}</Build-Label>
+            <Build-Revision>${git.commit.id}</Build-Revision>
+            <Build-Timestamp>${git.build.time}</Build-Timestamp>
             <Bundle-Activator>org.apache.activemq.util.osgi.Activator</Bundle-Activator>
             <Embed-Dependency>
               *;groupId=org.apache.activemq;inline=META-INF/services/*,
