--- a/activemq-karaf/pom.xml
+++ b/activemq-karaf/pom.xml
@@ -29,13 +29,15 @@
   <packaging>bundle</packaging>
   <name>ActiveMQ :: Apache Karaf</name>
   <description>Provides resources for running ActiveMQ in Apache Karaf</description>
+  <version>${revision}</version>
 
   <properties>
+    <revision>${activemq-karaf.features.tesb.version}</revision>
     <xpp3-bundle-version>1.1.4c_5</xpp3-bundle-version>
     <jodatime-bundle-version>2.9</jodatime-bundle-version>
     <jdom-bundle-version>1.1_4</jdom-bundle-version>
     <dom4j-bundle-version>1.6.1_2</dom4j-bundle-version>
-    <xstream-bundle-version>1.4.8_1</xstream-bundle-version>
+    <xstream-bundle-version>1.4.10_1</xstream-bundle-version>
     <servicemix.specs.version>2.4.0</servicemix.specs.version>
   </properties>
 
