--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
   <properties>
     <upstream.version>5.15.5</upstream.version>
+    <activemq-karaf.features.tesb.version>5.15.1.tesb1</activemq-karaf.features.tesb.version>
     <activemq-camel.tesb.version>5.15.5.tesb1</activemq-camel.tesb.version>
     <activemq-all.tesb.version>5.15.5.tesb1</activemq-all.tesb.version>
 
@@ -1159,6 +1160,37 @@
     <defaultGoal>test</defaultGoal>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>io.paradoxical</groupId>
+          <artifactId>resolved-pom-maven-plugin</artifactId>
+          <version>1.0</version>
+          <configuration>
+            <properties>
+              <revision>${revision}</revision>
+              <upstream.version>${upstream.version}</upstream.version>
+
+              <!-- ADD HERE ALL THE CUSTOM PROPERTIES declared in the above <properties> part -->
+              <!-- something like :
+              <my.custom.property>${my.custom.property}</my.custom.property>
+              -->
+              <activemq-karaf.features.tesb.version>${activemq-karaf.features.tesb.version}</activemq-karaf.features.tesb.version>
+              <activemq-camel.tesb.version>${activemq-camel.tesb.version}</activemq-camel.tesb.version>
+              <activemq-all.tesb.version>${activemq-all.tesb.version}</activemq-all.tesb.version>
+            </properties>
+          </configuration>
+          <executions>
+            <execution>
+              <id>resolve-my-pom</id>
+              <phase>initialize</phase>
+              <goals>
+                <goal>resolve-pom</goal>
+              </goals>
+              <configuration>
+                <resolvedPomFile>.resolved-pom.xml</resolvedPomFile>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
         <plugin>
           <groupId>org.apache.activemq.protobuf</groupId>
           <artifactId>activemq-protobuf</artifactId>
