--- a/activemq-camel/pom.xml
+++ b/activemq-camel/pom.xml
@@ -29,9 +29,10 @@
   <name>ActiveMQ :: Camel</name>
   <description>ActiveMQ component for Camel</description>
   <packaging>bundle</packaging>
-  <version>5.15.2.tesb1</version>
+  <version>${revision}</version>
 
   <properties>
+    <revision>${activemq-camel.tesb.version}</revision>
     <activemq.osgi.import.pkg>
        javax.jms;version="[1.1,3)",
        org.springframework.jms*;version="[4,5)",
@@ -60,6 +61,7 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-jms</artifactId>
+      <version>${camel-version}</version>
     </dependency>
     <!-- use the Camel apt compiler plugin -->
     <dependency>
