--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,9 @@
 
   <properties>
     <upstream.version>5.15.2</upstream.version>
-    <activemq-karaf.features.tesb.version>5.15.2.tesb1</activemq-karaf.features.tesb.version>
-    <activemq-osgi.tesb.version>5.15.2-tesb1</activemq-osgi.tesb.version>
+    <activemq-karaf.features.tesb.version>5.15.2.tesb2</activemq-karaf.features.tesb.version>
+    <activemq-camel.tesb.version>5.15.2.tesb1</activemq-camel.tesb.version>
+    <activemq-osgi.tesb.version>5.15.2.tesb1</activemq-osgi.tesb.version>
     <org.apache.servicemix.bundles.xstream.tesb.version>1.4.10_1</org.apache.servicemix.bundles.xstream.tesb.version>
     <jackson-databind.tesb.version>2.6.7.1</jackson-databind.tesb.version>
 
@@ -1161,6 +1162,39 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>io.paradoxical</groupId>
+          <artifactId>resolved-pom-maven-plugin</artifactId>
+          <version>1.0</version>
+          <configuration>
+            <properties>
+              <revision>${revision}</revision>
+              <upstream.version>${upstream.version}</upstream.version>
+
+              <!-- ADD HERE ALL THE CUSTOM PROPERTIES declared in the above <properties> part -->
+              <!-- something like :
+              <my.custom.property>${my.custom.property}</my.custom.property>
+              -->
+              <activemq-karaf.features.tesb.version>${activemq-karaf.features.tesb.version}</activemq-karaf.features.tesb.version>
+              <activemq-camel.tesb.version>${activemq-camel.tesb.version}</activemq-camel.tesb.version>
+              <activemq-osgi.tesb.version>${activemq-osgi.tesb.version}</activemq-osgi.tesb.version>
+              <org.apache.servicemix.bundles.xstream.tesb.version>${org.apache.servicemix.bundles.xstream.tesb.version}</org.apache.servicemix.bundles.xstream.tesb.version>
+              <jackson-databind.tesb.version>${jackson-databind.tesb.version}</jackson-databind.tesb.version>
+            </properties>
+          </configuration>
+          <executions>
+            <execution>
+              <id>resolve-my-pom</id>
+              <phase>initialize</phase>
+              <goals>
+                <goal>resolve-pom</goal>
+              </goals>
+              <configuration>
+                <resolvedPomFile>.resolved-pom.xml</resolvedPomFile>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
           <groupId>org.apache.activemq.protobuf</groupId>
           <artifactId>activemq-protobuf</artifactId>
           <version>${activemq-protobuf-version}</version>
@@ -1377,6 +1411,10 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>io.paradoxical</groupId>
+        <artifactId>resolved-pom-maven-plugin</artifactId>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
