--- a/activemq-web-console/pom.xml
+++ b/activemq-web-console/pom.xml
@@ -181,7 +181,7 @@
       <artifactId>tomcat-websocket-api</artifactId>
       <scope>provided</scope>
     </dependency>
-      
+
     <!-- j2ee jars -->
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
@@ -231,7 +231,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-console</artifactId>
-      <version>${project.version}</version>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
@@ -271,13 +271,13 @@
     </dependency>
 
     <!-- JSTL support -->
-    
+
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>apache-jstl</artifactId>
       <scope>provided</scope>
     </dependency>
-    
+
      <!-- Tag Libs -->
     <dependency>
       <groupId>org.apache.taglibs</groupId>
@@ -289,7 +289,7 @@
       <artifactId>taglibs-standard-impl</artifactId>
       <scope>provided</scope>
     </dependency>
-    
+
     <!-- used for testing -->
     <dependency>
       <groupId>junit</groupId>
@@ -309,7 +309,7 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>apache-jsp</artifactId>
@@ -321,7 +321,7 @@
           </exclusion>
       </exclusions>
     </dependency>
-    
+
      <dependency>
        <groupId>org.apache.geronimo.specs</groupId>
        <artifactId>geronimo-annotation_1.0_spec</artifactId>
