--- a/activemq-runtime-config/pom.xml
+++ b/activemq-runtime-config/pom.xml
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-broker</artifactId>
-      <version>${project.version}</version>
+      <version>${upstream.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
