--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
+    <activemq-karaf.features.tesb.version>5.16.4.20220422</activemq-karaf.features.tesb.version>
+    <jackson.tesb.version>2.13.2</jackson.tesb.version>
+    <jackson-databind.tesb.version>2.13.2.2</jackson-databind.tesb.version>
+
     <!-- JAR dependency versions -->
     <activemq-protobuf-version>1.1</activemq-protobuf-version>
     <activesoap-version>1.3</activesoap-version>
@@ -703,17 +707,17 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>${jackson-version}</version>
+        <version>${jackson.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>${jackson-version}</version>
+        <version>${jackson.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson-version}</version>
+        <version>${jackson-databind.tesb.version}</version>
       </dependency>
 
       <!-- Used to configure the activemq logs -->
@@ -1117,6 +1121,9 @@
               <!-- something like :
               <my.custom.property>${my.custom.property}</my.custom.property>
               -->
+              <activemq-karaf.features.tesb.version>${activemq-karaf.features.tesb.version}</activemq-karaf.features.tesb.version>
+              <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
+              <jackson-databind.tesb.version>${jackson-databind.tesb.version}</jackson-databind.tesb.version>
             </properties>
           </configuration>
           <executions>
